--- a/cart/templates/layouts/navbar.html
+++ b/cart/templates/layouts/navbar.html
@@ -13,7 +13,7 @@
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-11">
         <nav class="navbar navbar-expand-lg navbar-light">
-          <a class=" navbar-brand pc" href="{% url 'landing_page' %}"> <img src="{% static 'img/zohari_logo.jpeg' %}" alt="logo" width="100px;"> </a>
+          <a class=" navbar-brand pc" href="{% url 'landing_page' %}"> <img src="{% static 'img/zohari_logo_nbg.png' %}" alt="logo" width="100px;"> </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
