--- a/shop/templates/layouts/footer.html
+++ b/shop/templates/layouts/footer.html
@@ -199,22 +199,31 @@
         </div>
         <!--/.container--> 
     </div>
-    <!--/.footer-->
-    
+	<!--/.footer-->
+	<div class="container">
+    <p class="pull-left"> 
+		<span id="copyright">&copy; Copyright
+		<script>document.getElementById('copyright').appendChild(document.createTextNode((new Date().getFullYear()).toString()))</script>
+		All right reserved. <a href="https://newtonkiragu.github.io/"target="_blank">Newton Karanu.</a>
+		</span>
+	</p>
+</div>
     <div class="footer-bottom">
         <div class="container">
-            <p class="pull-left"> 
-                <span id="copyright">&copy; Copyright
-                <script>document.getElementById('copyright').appendChild(document.createTextNode((new Date().getFullYear()).toString()))</script>
-                All right reserved. <a href="https://newtonkiragu.github.io/"target="_blank">Newton Karanu.</a></span></p>
-            <div class="pull-right">
+            <!-- <p class="pull-left">  -->
+                <!-- <span id="copyright">&copy; Copyright -->
+                <!-- <script>document.getElementById('copyright').appendChild(document.createTextNode((new Date().getFullYear()).toString()))</script> -->
+				<!-- All right reserved. <a href="https://newtonkiragu.github.io/"target="_blank">Newton Karanu.</a> -->
+				<!-- </span> -->
+			<!-- </p> -->
+            <!-- <div class="pull-right"> -->
                 <!-- <ul class="nav nav-pills payments">
                 	<li><i class="fa fa-cc-visa"></i></li>
                     <li><i class="fa fa-cc-mastercard"></i></li>
                     <li><i class="fa fa-cc-amex"></i></li>
                     <li><i class="fa fa-cc-paypal"></i></li>
                 </ul>  -->
-            </div>
+            <!-- </div> -->
         </div>
     </div>
     <!--/.footer-bottom--> 
