--- a/shop/templates/product/product_detail.html
+++ b/shop/templates/product/product_detail.html
@@ -18,7 +18,7 @@
 					<h3 class="title mb-3">{{ object.item_name }}</h3>
 					<p class="price-detail-wrap">
 						<span class="price h3 text-warning">
-							<span class="currency">KES </span><span class="num">{{ object.item_price }}</span>
+							<span class="currency">Kshs. </span><span class="num">{{ object.item_price }}</span>
 						</span>
 
 					</p> <!-- price-detail-wrap .// -->
