--- a/shop/templates/contact.html
+++ b/shop/templates/contact.html
@@ -629,7 +629,7 @@ select.form-control[multiple] {
                     </div>
                     <!-- Form Submit -->
                     <div class="form-submit mt-5">
-                        <button class="btn btn-common" type="submit" id="form-submit"><i class="material-icons mdi mdi-message-outline"></i> Send Message</button>
+                        <button class="btn btn-primary" type="submit" id="form-submit"><i class="material-icons mdi mdi-message-outline"></i> Send Message</button>
                         <div id="msgSubmit" class="h3 text-center hidden"></div>
                         <div class="clearfix"></div>
                     </div>
